--- a/seeds/dictionaries/_dictionary__seeds.yml
+++ b/seeds/dictionaries/_dictionary__seeds.yml
@@ -1,11 +1,12 @@
 seeds:
-  - name: city-region
+  - name: city_region
     description: Сопоставление регионов и городов
     config:
-      delimiter: ";"
       column_types:
         city: varchar(50)
         region: varchar(50)
+        updated_at: timestamp
+      delimiter: ";"
     columns:
       - name: city
         tests:
